--- a/TMDT_Tuan4/TMDT_Tuan4.csproj
+++ b/TMDT_Tuan4/TMDT_Tuan4.csproj
@@ -341,6 +341,7 @@
     <Content Include="Views\Laptop\getWeight.cshtml" />
     <Content Include="Views\Laptop\getPriceLow.cshtml" />
     <Content Include="Views\Laptop\getPriceHigh.cshtml" />
+    <Content Include="Views\Laptop\getRam.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
